--- a/style.css
+++ b/style.css
@@ -6,37 +6,61 @@ ul {
     list-style: none;
 }
 
-body{
-    background-color: #beb4b4;
+.header a{
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #333;
+    filter: contrast(12px);
+    font-weight: bold;
+}
+.nav-bar2 a{
+    font-size: 14px;
+    font-weight: normal;
+}
+
+.header a:hover{
+    color: green;
+    text-decoration: none;
+}
+.big-contain{
+    background-color: #f0f0f0;
 }
 
 .menu1{
     display: none;
 }
 .header{
+    padding: 0 5% 0 5%;
     background-color: white;
      margin: auto;
      
 }
 
 .nav-bar1{
+
     margin: auto;
     display: flex;
     justify-content: space-between;
     height: auto;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     align-items: center;
-    width: 90%;
+    width: 100%;
 }
+
 
 .box{
     height: auto;
     display: flex;
-    background-color: #beb4b4;
+    
     /* border: 1px solid blue; */
+}
+hr{
+    margin: 0;
+    border: 0.5px solid gray;
 }
 
 .list1{
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +69,7 @@ body{
 .list1 li {
     margin-left: 25px;
 }
-.list1 i{
+.list1 i{   
     margin-left: 10px;
     margin-right: 20px;
 }
@@ -57,15 +81,7 @@ body{
     display: flex;
     align-items: center;
 }
-a{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-}
-.nav-bar1 a:hover{
-    color: rgb(67, 170, 67);
-}
+
 
 .fas fa-bell{
     height: 100px;
@@ -75,6 +91,10 @@ a{
     width: 50px;
     height: 50px ;
     border-radius: 100%;
+}
+
+#bell{
+    font-size: 25px;
 }
 .hr{
     display: flex;
@@ -90,9 +110,8 @@ a{
     display: flex;
 }
 
-.nav-bar2{
-    background-color:yellow ;
-    width: 90%;
+.nav-bar2{  
+    width: 100%;
     margin: auto;
     height: auto;
     word-wrap: break-word;
@@ -118,23 +137,27 @@ hr{
     border: 2px solid black;
 }
 .main{
+    padding: 0 5% 0 5%;
     display: flex;
-    width: 90%;
+    width: 100%;
     margin: auto;
-    background-color: red;
+  
 }
 
 .main-left{
     display: flex;
     flex-wrap: wrap;   
     width: 65%;
+    padding-bottom: 40px;
+    
 }
 
 .block{
     width: 45%;
     height: auto;
-    margin: 20px 20px 0 0px;
-    background-color: #FFFFFF;
+    margin: 25px 25px 0 0px;
+    background-color: #ffffff;
+    
     
 }
 
@@ -152,7 +175,7 @@ hr{
     height: 50px;
     border: none;
     border-radius: 4px;
-
+    color:white;
 }
 
 .but{
@@ -163,7 +186,7 @@ hr{
 .block img{
     width: 100%;
     height: auto;
-    background-color: #ffffff;
+    
 }
 .block i{
     color: #FFB239;
@@ -171,13 +194,15 @@ hr{
 
 .block:hover > img{
     filter: brightness(70%);
-    box-shadow: inset;
+    
 }
-
+.block:hover{
+    box-shadow: 0 8px 6px -10px black;
+}
 .main-right{
    width: 35%;
    height: 900px; 
-   
+   margin: 20px auto;
 
 }
 
@@ -214,9 +239,10 @@ hr{
     margin: 20px 0 20px 0;
 }
 .content{
+
     height: auto;
     width: 100%;
-    background-color: rgb(0, 0, 0);
+    background-color: white;
     padding: 10px 20px 0 20px;
 }
 
@@ -226,6 +252,25 @@ hr{
         justify-content: space-between;
 
     }
+    .main{
+        width: 100%;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    
+    .main-right{
+        width: 100%;
+    }
+    .main-left{
+        width: 100%;
+    }
+    .content{
+        width: 100%;
+    }
+    .block{
+        width: 100%;
+    }
+
     .menu{
         display: block;
     }
@@ -244,8 +289,8 @@ hr{
 
 .foot{
     margin:  30px auto;
-    height: 500px;
-    width: 90%;
+    height: auto;
+    width: 100%;
     
 
 }
@@ -253,6 +298,7 @@ hr{
 .footer-up{
     color: #999999;
     display: flex;
+    padding: 0 5% 0 5%;
 }
 .footer-top-left{
     display: flex;
@@ -274,8 +320,52 @@ hr{
 .connect i{
     color: #999999;
 }
+
+.flex{
+    
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 10px;
+}
+
+
+.flex ul{
+    border: 1px solid black;
+}
+
+.flex img{
+    margin-right: 10px;
+}
 .footer-top-right{
     width: 41%;
-    background-color: aqua;
+    background-color:;
     height: 500px;
 }
+
+.down-up{
+    
+    width: 100%;
+    margin: auto
+}
+.down-up ul{
+    
+    width: auto;
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;        
+}
+.down-up li{
+    margin: 5px;
+}
+.down-down {
+    width: 100%;
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+}
+
+.footer-down{
+    padding: 0 5% 0 5%;
+}
+
+
