--- a/style.css
+++ b/style.css
@@ -40,7 +40,9 @@ ul {
 }
 
 .foot{
-    padding-top: 20px;
+    margin:  0px auto;
+    height: auto;
+    width: 100%;
     background-color: white;
 }
 .foot a:hover{
@@ -51,7 +53,7 @@ ul {
     background-color: #f0f0f0;
 }
 
-.menu1{
+.menu1 {
     display: none;
 }
 .header{
@@ -124,6 +126,13 @@ hr{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.custom-control-input:checked~.custom-control-label::before {
+    color: #fff;
+    border-color: red;
+    background-color: red;
+    
 }
 
 .list1 li {
@@ -231,8 +240,10 @@ hr{
 .block button {
     background-color: rgb(202, 28, 28);
     width: 120px;
-    height: 50px;
+    font-weight: bold;
+    height: 40px;
     border: none;
+    font-size: revert;
     border-radius: 4px;
     color:white;
 }
@@ -301,7 +312,48 @@ hr{
     width: auto;
     background-color: white;
     padding: 0 5% 30px 5%;
+    margin: 20px auto;
 }
+.container{
+    padding: 20px;
+    background-color: white;
+}
+.row button{
+    display: flex;
+    justify-content: center;
+    margin-left: 20px;
+}
+.container p{
+    margin-left: 20px;
+    
+}
+.container h4{
+    margin-left: 40px;
+}
+
+#bo{
+    
+    width: 80px;
+    height: 80px;
+    background-color: grey;
+    border-radius: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: large;
+    font-weight: 700;
+}
+#num{
+    font-size: 25px;
+}
+#times{
+    font-size: 14px;
+}
+
+
+
 
 @media only screen and (max-width: 800px){
     .nav-bar1{
@@ -312,32 +364,17 @@ hr{
     .header{
         padding: 0 5% 0 5%;
     }
-    .nav-bar2{
-        
-        display: flex;        
-        justify-content: flex-end;
+
+    
+    .nav-bar2 ul{
+        display: none;        
         
     }
    i {
        font-weight: 1px;
         font-size: 30px;
     }
-    .menu1{
-        padding: 0 0 0 6px ;
-        background-color: white;
-        display: flex;
-        align-items: center;
-        width: 40px;
-        height: 30px;
-        border: 0.5px solid black;
-        display: block;
-        border-radius: 5px;
-    }
-
-    .menu1:hover{
-        filter: brightness(90%);
-        border: 0.5px solid black;
-    }
+    
     .main{
         width: 100%;
         display: flex;
@@ -345,11 +382,18 @@ hr{
         padding: 0 5% 0 5%;
     }
     
+    
     .main-box-left{
         width: 100%;
     }
-
+    .list2{
+        display: none;
+    }
     
+    .nav-bar2{
+        display: flex;
+        justify-content: flex-end;
+    }
     .main-right{
         width: 100%;
     }
@@ -384,30 +428,27 @@ hr{
     }
 }
 
-.foot{
-    padding: 30px 5% 0 5%;
-    margin:  30px auto;
-    height: auto;
-    width: 100%;
-    
 
-}
 
 .footer-up{
     color: #999999;
     display: flex;
     justify-content: space-between;
+    /* padding: 30px 5% 0 5%; */
     
-    
-}
-.footer-top-left{
-    display: flex;
-    width: auto;
-    height: auto;   
 }
 
+.footer-top-left ul{
+    margin-right: 30px;
+}
+.footer-top-left{
+    width: 65%;
+    display: flex;
+    padding: 20px 5% 0 5%;
+    background-color: #F7F7F7;
+}
 .connect li{
-    margin:0 0 30px 20px;
+    margin:5px auto;
 }
 .list2 li{
     padding-right: 20px;
@@ -418,7 +459,7 @@ hr{
     border-bottom: 1px solid black;
 }
 .list li{
-    margin: 0 10px 15px 0;
+    margin:5px auto;
 }
 .connect i{
     color: #999999;
@@ -430,6 +471,11 @@ hr{
     align-items: flex-start;
     margin-bottom: 10px;
 }
+.app{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
 
 
 
@@ -438,8 +484,9 @@ hr{
     margin-right: 10px;
 }
 .footer-top-right{
-    width: auto;
-    background-color:;
+    width: 45%;
+    padding: 20px 5%  5%;;
+    background-color: white;
     height: auto;
 }
 .footer-down{
@@ -448,7 +495,8 @@ hr{
 }
 .down-up{
     width: 100%;
-    margin: auto
+    margin: auto;
+    padding: 30px 5% 20px 5%;
 }
 .down-up ul{
     
@@ -461,6 +509,7 @@ hr{
     margin: 5px;
 }
 .down-down {
+    padding: 30px 5% 0 5%;
     width: 100%;
     display: flex;
     margin: auto;
